--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,10 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+.idea/deployment.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/other.xml
+.idea/pythonProject2.iml
+.idea/worksapce.xml
