멀티쓰레드 구현 및 최종코드

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ fabric.properties
 .idea/pythonProject2.iml
 .idea/worksapce.xml
 .idea/
+
+# yolo
+./PC/yolov3_testing.cfg
+./PC/yolov3_training_last.weights
